Explain how to use